--- a/style.css
+++ b/style.css
@@ -316,15 +316,15 @@ nav {
 
 .game-type-container{
   background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
-  padding: 50px;
+  padding: 50px 120px;
 }
-.nine-container{
-  width: 80%;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(5,1fr);
-  gap: 10px;
-  
+.nine{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  align-items: center;
+
 }
 .game-types{
   display: flex;
